feat(web): 데이터 수집 잡 API 추가
